--- a/style.css
+++ b/style.css
@@ -7,13 +7,17 @@ body{
     background: url("./img/.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: rgb(255, 147, 250);
 }
 /* INSTA */
 .insta{
     position: fixed;
     right: 20px;
     bottom: 10px;
+}
+.whatsapp{
+    position: fixed;
+    right: 20px;
+    bottom: 70px;
 }
 .insta img{
     width: 50px;
@@ -39,7 +43,7 @@ header{
 /* nav */
 nav{
     position: absolute;
-    width: 300px;
+    max-width: 700px;
     right: 20px;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -108,6 +112,7 @@ main{
     color: white;
     padding: 20px;
     border-radius: 20px;
+    text-decoration: none;
 }
 .btn_head:hover{
     background-color: blue;
@@ -118,13 +123,13 @@ main{
     width: 80%;
     margin: auto;
     box-sizing: border-box;
-    background-color: white;
 }
 
 /* title início container*/
-.title_inicio_container{
+#title_inicio_container{
+    font-size: xx-large;
     text-align: center;   
-    padding-top: 100px;  
+    padding-top: 10%;  
     padding-bottom: 20px;
 }
 
@@ -142,13 +147,14 @@ main{
 .img_corte{
     width: 100%;
 }
-.p_corte{
-    padding-bottom: 20px;
+.table_cortes{
+    margin: auto;
 }
 .btn_corte{
     background-color: green;
     color: white;
     padding: 10px;
+    margin-top: 60px;
     margin-bottom: 20px;
     border-radius: 20px;
     text-decoration: none;
@@ -157,14 +163,51 @@ main{
     background-color: blue;
 }
 
+/* SECTION_FORM */
+#section_form{
+    padding-top: 5%;
+    background: #ffa600;
+    max-width: 600px;
+    margin: auto;
+    border-radius: 10% 0px;
+    margin-top: 10%;
+}
+/* form */
+.form{
+    width: 90%;
+    margin: auto;
+    text-align: center;
+    padding: 20px;
+}
+.form input, .form textarea, .form select{
+    box-sizing: border-box;
+    color: red;
+    display: block;
+    margin: auto;
+    font-size: large;
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+input[type="submit"]{
+    color: white;
+    background-color: green;
+}
+input[type="submit"]:active{
+    font-size: x-large;
+}
+
+/* FOOTER */
 footer{
-    margin: 20px;
+    margin: auto;
+    margin-top: 10%;
     padding: 40px;
     text-align: center;
     background-color: aqua;
 }
 
-
+/* MEDIA QUERIES */
 @media screen and (max-width: 700px) {
     .tipos_cortes{
         width: 100%;
@@ -177,21 +220,32 @@ footer{
     
     /* logo */
     .logo{
-        float: left;
+        float: none;
         width: 40px;
+        margin: auto;
+        display: block;
+        margin-bottom: 10px;
     }
     
     /* nav */
     nav{
-        width: 300px;
+        max-width: 500px;
         right: 20px;
         top: 50%;
         transform: translate(0%, -50%);
         text-align: center;
     }
-    
-    /* menu */
-    .menu{
-        list-style-type: none;
+    nav{
+        position: static;
+        max-width: 700px;
+        top: 0%;
+        right: 0px;
+        transform: translate(0%, 0%);
+        text-align: center;
     }
+    .link_menu{
+        margin-bottom: 2%;
+        float: none;
+        display: block;
+    }    
 }
