--- a/style.css
+++ b/style.css
@@ -4,9 +4,6 @@
 body{
     font-size: large;
     font-family: Arial, Helvetica, sans-serif;
-    background: url("./img/.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 /* INSTA */
 .insta{
@@ -84,7 +81,7 @@ main{
 
 /* img_head */
 .img_head{
-    background: url("./img/banner-inicio.jpg"), no-repeat;
+    background: url("./img/banner-inicio-reduzido.jpg"), no-repeat;
     background-size:  cover;
     background-position-x: -300px;
     width: 100%;
